<resources>
    <string name="app_name">Open_navi_cation</string>
    <string name="gdzie_chcesz_i">Gdzie chcesz iść</string>
    <string name="go">Go</string>
    <string name="pomieszczenie">Pomieszczenie..</string>
    <string name="up">UP</string>
    <string name="down">Down</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>