<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/parent_container"
        android:layout_width="411dp"
        android:layout_height="725dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="1dp">

        <org.osmdroid.views.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="NotSibling">
        </org.osmdroid.views.MapView>


        <Button
            android:id="@+id/go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="38dp"
            android:onClick="trasowanie"
            android:text="@string/go"
            tools:ignore="RelativeOverlap"
            tools:layout_editor_absoluteX="230dp"
            tools:layout_editor_absoluteY="100dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="35dp"
            android:text="@string/gdzie_chcesz_i"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="230dp"
            android:layout_height="48dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/pomieszczenie"
            android:autofillHints="name" />

        <Button
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:onClick="LewelUpMap"
            android:text="@string/up" />

        <Button
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="210dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:onClick="LewelDownMap"
            android:text="@string/down" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>